@@ -24,6 +24,8 @@ Bug fixes:
   screen (packet 01D8, "Player Exists"). It was previously detecting
   every non-dead player as sitting.
 - openkore was not displaying left hand damage when right hand missed.
+- openkore should recognize when someone is made to stand up by an
+  attack, taking into account that Endure/miss doesn't count.
 
 New features:
 - Better support for detecting dead players.
